# op_fonts

./: .gitignore  README.md  op_fonts.toml  pyproject.toml
charsets/: cjk_unified.txt  ja_joyo_kanji.txt  jp_common.txt  ko_ksx1001_hangul.txt  sc_common.txt  sc_tongyong_l1.txt  tc_common.txt  tc_edu_standard_1.txt
op_fonts/: __init__.py  __main__.py  charsets.py  cli.py  config.py  download.py  extract.py  merge.py  naming.py  pipeline.py  subset.py  unicode_blocks.py
